<resources>
    <string name="app_name">Wisielec</string>
    <string name="nodevice">No device to connection</string>
    <string name="again">Rewanż ?</string>
    <string name="a">A</string>
    <string name="aa">Ą</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="cc">Ć</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="ee">Ę</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="ll">Ł</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="nn">Ń</string>
    <string name="o">O</string>
    <string name="oo">Ó</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="ss">Ś</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="zz">Ż</string>
    <string name="zzz">Ź</string>

    <string name="btn_enable">Włącz / wyłącz Bluetooth</string>
    <string name="btn_discoverable">Stań się widoczny</string>
    <string name="btn_discover">Znajdź urządzenia</string>
    <string name="btn_start_connection">Rozpocznij grę!</string>
    <string name="password_view">Oczekiwanie na hasło . . .</string>
    <string name="btn_send">Wyślij</string>
    <string name="textview_enemy">PRZECIWNIK</string>
    <string name="textview_you">TY</string>
    <string name="edittext_hint">Wpisz hasło</string>
</resources>
