<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/a"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/a"
        app:layout_constraintBottom_toTopOf="@+id/ee"
        app:layout_constraintEnd_toStartOf="@+id/aa" />

    <Button
        android:id="@+id/aa"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/aa"
        app:layout_constraintBottom_toTopOf="@+id/f"
        app:layout_constraintEnd_toStartOf="@+id/b" />

    <Button
        android:id="@+id/b"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/b"
        app:layout_constraintBottom_toTopOf="@+id/g"
        app:layout_constraintEnd_toStartOf="@+id/c" />

    <Button
        android:id="@+id/c"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/h"
        app:layout_constraintEnd_toStartOf="@+id/cc" />

    <Button
        android:id="@+id/cc"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/cc"
        app:layout_constraintBottom_toTopOf="@+id/i"
        app:layout_constraintEnd_toStartOf="@+id/d" />

    <Button
        android:id="@+id/d"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/d"
        app:layout_constraintBottom_toTopOf="@+id/j"
        app:layout_constraintEnd_toStartOf="@+id/e" />

    <Button
        android:id="@+id/e"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/e"
        app:layout_constraintBottom_toTopOf="@+id/k"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/ee"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/ee"
        app:layout_constraintBottom_toTopOf="@+id/l"
        app:layout_constraintEnd_toStartOf="@+id/f" />

    <Button
        android:id="@+id/f"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/f"
        app:layout_constraintBottom_toTopOf="@+id/ll"
        app:layout_constraintEnd_toStartOf="@+id/g" />

    <Button
        android:id="@+id/g"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/g"
        app:layout_constraintBottom_toTopOf="@+id/m"
        app:layout_constraintEnd_toStartOf="@+id/h" />

    <Button
        android:id="@+id/h"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/h"
        app:layout_constraintBottom_toTopOf="@+id/n"
        app:layout_constraintEnd_toStartOf="@+id/i" />

    <Button
        android:id="@+id/i"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/i"
        app:layout_constraintBottom_toTopOf="@+id/nn"
        app:layout_constraintEnd_toStartOf="@+id/j" />

    <Button
        android:id="@+id/j"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/j"
        app:layout_constraintBottom_toTopOf="@+id/o"
        app:layout_constraintEnd_toStartOf="@+id/k" />

    <Button
        android:id="@+id/k"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/k"
        app:layout_constraintBottom_toTopOf="@+id/oo"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/l"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/l"
        app:layout_constraintBottom_toTopOf="@+id/p"
        app:layout_constraintEnd_toStartOf="@+id/ll" />

    <Button
        android:id="@+id/ll"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/ll"
        app:layout_constraintBottom_toTopOf="@+id/q"
        app:layout_constraintEnd_toStartOf="@+id/m" />

    <Button
        android:id="@+id/m"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/m"
        app:layout_constraintBottom_toTopOf="@+id/r"
        app:layout_constraintEnd_toStartOf="@+id/n" />

    <Button
        android:id="@+id/n"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/n"
        app:layout_constraintBottom_toTopOf="@+id/s"
        app:layout_constraintEnd_toStartOf="@+id/nn" />

    <Button
        android:id="@+id/nn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/nn"
        app:layout_constraintBottom_toTopOf="@+id/ss"
        app:layout_constraintEnd_toStartOf="@+id/o" />

    <Button
        android:id="@+id/o"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/o"
        app:layout_constraintBottom_toTopOf="@+id/t"
        app:layout_constraintEnd_toStartOf="@+id/oo" />

    <Button
        android:id="@+id/oo"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/oo"
        app:layout_constraintBottom_toTopOf="@+id/u"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/p"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/p"
        app:layout_constraintBottom_toTopOf="@+id/v"
        app:layout_constraintEnd_toStartOf="@+id/q" />

    <Button
        android:id="@+id/q"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/q"
        app:layout_constraintBottom_toTopOf="@+id/w"
        app:layout_constraintEnd_toStartOf="@+id/r" />

    <Button
        android:id="@+id/r"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/r"
        app:layout_constraintBottom_toTopOf="@+id/x"
        app:layout_constraintEnd_toStartOf="@+id/s" />

    <Button
        android:id="@+id/s"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/s"
        app:layout_constraintBottom_toTopOf="@+id/y"
        app:layout_constraintEnd_toStartOf="@+id/ss" />

    <Button
        android:id="@+id/ss"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/ss"
        app:layout_constraintBottom_toTopOf="@+id/z"
        app:layout_constraintEnd_toStartOf="@+id/t" />

    <Button
        android:id="@+id/t"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/t"
        app:layout_constraintBottom_toTopOf="@+id/zz"
        app:layout_constraintEnd_toStartOf="@+id/u" />

    <Button
        android:id="@+id/u"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/u"
        app:layout_constraintBottom_toTopOf="@+id/zzz"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/v"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/v"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/w" />

    <Button
        android:id="@+id/w"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/w"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/x" />

    <Button
        android:id="@+id/x"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/y" />

    <Button
        android:id="@+id/y"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/y"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/z" />

    <Button
        android:id="@+id/z"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/z"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zz" />

    <Button
        android:id="@+id/zz"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/zz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zzz" />

    <Button
        android:id="@+id/zzz"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="47dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/zzz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hasloView"
        android:layout_width="208dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/password_view"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="159dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edittext_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hangman0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/textview_enemy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="99dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="48dp"
        android:text="@string/textview_you"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hangman00" />

    <Button
        android:id="@+id/again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:text="@string/again"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />


</android.support.constraint.ConstraintLayout>